--- a/index.html
+++ b/index.html
@@ -93,6 +93,17 @@ və Konfiqurasiyası
                             Müştərilər
                         </h1>
                     </div>
+                        <div class="main-partnyor-logos">
+                            <img src="./images/vertiv logo 1 (1).png" alt="" class="main-partnyor-logo-img">
+                            <img src="./images/client-10-180x65.png" alt="" class="main-partnyor-logo-img">
+                            <img src="./images/client-08-138x65.png" alt="" class="main-partnyor-logo-img">
+                            <img src="./images/client-08-138x65 (2).png" alt="" class="main-partnyor-logo-img">
+                            <img src="./images/client-06-146x65.png" alt="" class="main-partnyor-logo-img">
+                            <img src="./images/client-06-146x65 (1).png" alt="" class="main-partnyor-logo-img">
+                            <img src="./images/client-05-134x65.png" alt="" class="main-partnyor-logo-img">
+                            <img src="./images/client-03-182x65 (1).png" alt="" class="main-partnyor-logo-img">
+                        </div>
+                    
                 </div>
             </div>
         </section>
