--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ və Konfiqurasiyası
                                 <img src="./images/vertiv logo 2.png" alt="">
                                 <img src="./images/Frame.png" alt="">
                                 <img src="./images/Frame (1).png" alt="">
-                            </div>
+                            </div>a
                             <div class="main-brand-row">
                                 <img src="./images/Group 28.png" alt="" class="main-brand-row">
                             </div>
@@ -209,5 +209,8 @@ və Konfiqurasiyası
             </div>
         </section>
     </main>
+    <footer>
+        
+    </footer>
 </body>
 </html>
